# kvlite

./: .gitignore  CLAUDE.md  CMakeLists.txt  KVBENCH.md  LICENSE  README.md
benchmarks/: bucket_codec_report.md
blogs/: api-guide.md  architecture.md  crash-recovery.md  design-principles.md  dht-internals.md  version-dedup.md
examples/: CMakeLists.txt  basic.cpp  batch.cpp  iterator.cpp  snapshots.cpp
include/kvlite/: batch.h  db.h  db_admin.h  iterator.h  kvlite.h  options.h  read_batch.h  snapshot.h  status.h  write_batch.h
src/: batch.cpp  db.cpp  db_iterator.cpp  status.cpp
src/internal/: bit_stream.h  bitmap.h  bucket_arena.cpp  bucket_arena.h  bucket_codec.cpp  bucket_codec.h  bucket_stats.h  crc32.h  data_cache.h  db_impl.h  delta_hash_table.cpp  delta_hash_table.h  delta_hash_table_base.h  duplicates_bucket_bitmap.h  entry_stream.cpp  entry_stream.h  gc.cpp  gc.h  gc_manager.cpp  gc_manager.h  gc_stream.cpp  gc_stream.h  global_delta_hash_table.cpp  global_delta_hash_table.h  global_index.cpp  global_index.h  global_index_manager.cpp  global_index_manager.h  global_index_savepoint.cpp  global_index_savepoint.h  global_index_wal.cpp  global_index_wal.h  id_vec_pool.h  l1_index.cpp  l1_index.h  l1_index_manager.h  l1_wal.h  l2_cache.h  l2_delta_hash_table.cpp  l2_delta_hash_table.h  (+45 more)
src/tools/: CMakeLists.txt  kvbench.cpp  zipfian_generator.h
tests/: CMakeLists.txt  bench_bucket_codec.cpp  bench_dht.cpp  bench_savepoint.cpp  test_basic.cpp  test_batch.cpp  test_bit_stream.cpp  test_concurrency.cpp  test_db.cpp  test_delta_hash_table.cpp  test_entry_stream.cpp  test_gc_daemon.cpp  test_iterator.cpp  test_l2_index.cpp  test_log_file.cpp  test_manifest.cpp  test_segment.cpp  test_segment_index.cpp  test_segment_storage_manager.cpp  test_storage_manager.cpp  test_version_dedup.cpp  test_version_manager.cpp  test_versioning.cpp  test_wal.cpp  test_wal_stream.cpp  test_write_buffer.cpp  test_zipfian.cpp
